--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.4",
     "lucide-react": "^0.408.0",
+    "mongoose": "^8.5.1",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
